--- a/appinsights-secret.yaml
+++ b/appinsights-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: monitoring
 type: Opaque
 stringData:
-  APPLICATIONINSIGHTS_CONNECTION_STRING: "<your_connection_string_here>"
+  APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=652742ee-5731-4dac-acc6-a9b6a9dd01ea;IngestionEndpoint=https://westus2-2.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/;ApplicationId=fcaeecda-6e03-46e1-913f-e6fc8c7f03e4"
